--- a/po/te.po
+++ b/po/te.po
@@ -3,23 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Krishna Babu K <kkrothap@redhat.com>, 2009.
-# దండు ప్రసాద్ <dandu_prasad2000@yahoo.com>, 2005.
-# రమణ సాయి <rmn_sai@yahoo.com>, 2005.
-# విక్రం ఫణీంద్ర <vikramphaneendra@yahoo.co.in>, 2005.
+# Krishnababu Krothapalli <kkrothap@redhat.com>, 2009
+# దండు ప్రసాద్ <dandu_prasad2000@yahoo.com>, 2005
+# ప్రవీణ్ ఇళ్ళ <mail2ipn@gmail.com>, 2014
+# రమణ సాయి <rmn_sai@yahoo.com>, 2005
+# విక్రం ఫణీంద్ర <vikramphaneendra@yahoo.co.in>, 2005
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
-"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 12:01+0200\n"
-"PO-Revision-Date: 2012-07-07 10:02+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2014-02-25 13:10+0000\n"
+"Last-Translator: ప్రవీణ్ ఇళ్ళ <mail2ipn@gmail.com>\n"
+"Language-Team: Telugu (http://www.transifex.com/projects/p/MATE/language/te/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: te\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
@@ -28,7 +29,7 @@ msgstr ""
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
-msgstr "ఫ్లో"
+msgstr "ప్రవాహం"
 
 #: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
@@ -56,14 +57,14 @@ msgstr ""
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Stripes"
-msgstr ""
+msgstr "చారలు"
 
 #. Translators: This is the name of a desktop background image that shows an
 #. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
-msgstr "తాజా పువ్వు"
+msgstr "తాజా పుష్పం"
 
 #. Translators: This is the name of a desktop background image that shows a
 #. green meadow.
@@ -90,7 +91,7 @@ msgstr "రెండు రెక్కలు"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
-msgstr "లేడీ బర్డు"
+msgstr "ఆడ పక్షి"
 
 #: ../nature/mate-nature.xml.in.in.h:12
 msgid "Blinds"
