--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
-1.9.0
+1.9.1
+  * Add Ubuntu MATE wallpapers without branding, by Ubuntu MATE team
   * Add new MATE-Stripes-Dark.png, MATE-Stripes-Light.png wallpapers by hekel
 
 1.8.0
