--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
-1.13.0
-   * pump version to 1.13.0
+1.14.0
+   * Add new languages and sync translations with transiflex
+   * Add Changelog generation
+
 1.12.0
+   * Sync translations with transifex
 
 1.10.0
   * Add Ubuntu MATE wallpapers without branding, by Ubuntu MATE team
