--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+1.15.0
+
+   * Sync translations with transifex
+
 1.14.0
    * Add new languages and sync translations with transiflex
    * Add Changelog generation
